feat: add webpack and basic entry files
* config: run webpack task of '@stackr23/preset-mrm'
* add webpack entry (index.html + index.js + App.jsx)
* lint: allow jsx code in TS files
* add TSX TestComponent

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-  "extends": "./node_modules/@stackr23/config-eslint/env/react.js"
+  "extends": "./node_modules/@stackr23/config-eslint/env/react.js",
+  "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+  }
 }
