config: add `tsconfig.json` * deps: add `tslib` for `downlevelIteration` with `importHelpers` on

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "dependencies": {
     "@stackr23/config-eslint": "^2.0.0",
-    "@stackr23/webpack": "^2.0.0"
+    "@stackr23/webpack": "^2.0.0",
+    "tslib": "^2.3.0"
   }
 }
