config(eslint): use import-resolver for typescript using the paths in `tsconfig.json`

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,27 @@
 {
-  "extends": "./node_modules/@stackr23/config-eslint/env/react.js",
+  "extends": "./node_modules/@stackr23/config-eslint",
+  "settings": {
+    "react": {
+      "version": "detect"
+    },
+    "import/resolver": {
+      "node": false,
+      "webpack": false,
+      "typescript": {
+        "alwaysTryTypes": true
+      }
+    }
+  },
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }]
+    "sort-imports": [
+      2,
+      {
+        "ignoreCase": false,
+        "ignoreDeclarationSort": true,
+        "ignoreMemberSort": true,
+        "memberSyntaxSortOrder": ["single", "all", "multiple", "none"],
+        "allowSeparatedGroups": true
+      }
+    ]
   }
 }
