--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,17 +1,23 @@
 name: GitHub Actions Demo
-on: [push]
+on: [push, pull_request]
 jobs:
-  build:
+  test:
+    name: Testing with NodeJS v${{ matrix.node }}
     runs-on: ubuntu-latest
+    continue-on-error: ${{matrix.stable != true}}
     strategy:
       matrix:
-        node: ['12', '14', '16']
-    name: Testing with NodeJS v${{ matrix.node }}
+        node: ['13', '14', '15']
+        stable: [true]
+        include:
+          - node: 16
+            os: ubuntu-18.04
+            stable: false
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-      - run: npm install
+      - run: npm ci
       - run: npm test
