--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -33,7 +33,7 @@ jobs:
       - run: npm test
   release:
     name: Semantic Release Process
-    needs: test
+    needs: karma_test
     if: ${{github.ref == 'refs/heads/main'}}
     runs-on: ubuntu-latest
     steps:
