--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -34,7 +34,7 @@ jobs:
   release:
     name: Semantic Release Process
     needs: karma_test
-    if: ${{github.ref == 'refs/heads/main'}}
+    # if: ${{github.ref == 'refs/heads/main'}}
     runs-on: ubuntu-latest
     steps:
       - run: echo "RUNNING SEMANTIC RELEASE"
