--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        node: ['13', '14', '15']
+        node: ['12', '13', '14']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -33,8 +33,16 @@ jobs:
       - run: npm test
   release:
     name: Semantic Release Process
-    needs: karma_test
+    # needs: karma_test
     # if: ${{github.ref == 'refs/heads/main'}}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - run: echo "RUNNING SEMANTIC RELEASE"
