--- a/.github/workflows/github-actions-test.yml
+++ b/.github/workflows/github-actions-test.yml
@@ -1,17 +1,30 @@
 name: GitHub Actions Demo
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - 'develop'
+      - 'feat/**'
+      - 'fix/**'
+    tags-ignore:
+      - '**'
+  pull_request:
+    branches:
+      - 'main'
+    tags-ignore:
+      - '**'
 jobs:
-  test:
+  karma_test:
     name: Testing with NodeJS v${{ matrix.node }}
     runs-on: ubuntu-latest
-    continue-on-error: ${{matrix.stable == false}}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
-        node: ['13', '14', '15']
-        stable: [true]
+        node: ['12', '13', '14']
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Setup node
         uses: actions/setup-node@v2
         with:
@@ -20,8 +33,16 @@ jobs:
       - run: npm test
   release:
     name: Semantic Release Process
-    if: ${{github.ref == 'refs/heads/main' && github.event_name == 'pull_request'}}
-    needs: test
+    needs: karma_test
+    if: ${{github.ref == 'refs/heads/main' && github.event.pull_request.merged == true}}
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
       - run: echo "RUNNING SEMANTIC RELEASE"
