--- a/.eslintrc
+++ b/.eslintrc
@@ -13,6 +13,7 @@
     }
   },
   "rules": {
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".ts", ".tsx"] }],
     "sort-imports": [
       2,
       {
