--- a/.github/workflows/github-action-release.yml
+++ b/.github/workflows/github-action-release.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Semantic Release
 on:
   push:
     branches:
@@ -11,11 +11,18 @@ jobs:
     name: Semantic Release Process
     runs-on: ubuntu-latest
     steps:
-      - name: Setup node
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version: 14
-      - run: echo "RUNNING SEMANTIC RELEASE"
+      - name: Install Semantic Release Packages
+        run: npm i -g semantic-release @semantic-release/commit-analyzer @semantic-release/release-notes-generator @semantic-release/changelog @semantic-release/npm @semantic-release/git @semantic-release/github
+      - name: Exec Semantic Release
+        run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
