--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-transform-react-constant-elements": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
     "@stackr23/config-eslint": "^2.0.4",
     "eslint": "^7.27.0",
     "husky": "^6.0.0",
