--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@stackr23/config-eslint": "^2.0.4",
+    "@stackr23/webpack": "^2.0.0",
     "eslint": "^7.27.0",
     "husky": "^6.0.0",
     "karma": "^6.3.4",
@@ -48,7 +49,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@stackr23/webpack": "^2.0.0",
+    "react": "^17.0.2",
     "tslib": "^2.3.0"
   },
   "private": true,
