--- a/package.json
+++ b/package.json
@@ -40,16 +40,21 @@
     "@babel/plugin-proposal-export-default-from": "^7.14.5",
     "@babel/plugin-transform-react-constant-elements": "^7.14.5",
     "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@stackr23/config-eslint": "^2.0.4",
-    "@stackr23/webpack": "^2.0.0",
+    "@stackr23/webpack": "^2.1.1",
     "eslint": "^7.27.0",
     "husky": "^6.0.0",
     "karma": "^6.3.4",
     "lint-staged": "^11.0.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "tslib": "^2.3.0"
   },
   "private": true,
