--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "eslint --fix --ext \".js,.jsx,.ts,.tsx\" . --quiet --format pretty && prettier **/*.{css,scss,md,json} --write",
     "clean": "rimraf build",
     "build": "npm run clean && webpack -p --mode production --env production",
-    "start": "webpack-dev-server --open --mode development --env development_core"
+    "start": "webpack-dev-server --open --mode development --env development_core",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -22,17 +23,16 @@
   "homepage": "https://github.com/stackr23/react-stack#readme",
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "npm test"
     }
   },
   "lint-staged": {
-    "*.{css,scss,json,md}": [
-      "prettier --write",
-      "git add"
+    "*.{css,scss,json,md,yml}": [
+      "prettier --write"
     ],
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix --quiet",
-      "git add"
+      "eslint --fix --quiet"
     ]
   },
   "devDependencies": {
@@ -46,7 +46,7 @@
     "@stackr23/config-eslint": "^2.0.4",
     "@stackr23/webpack": "^2.1.1",
     "eslint": "^7.27.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.2",
     "karma": "^6.3.4",
     "lint-staged": "^11.0.0",
     "rimraf": "^3.0.2",
