WIP: postponed for webpack upgrade to v5

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,12 @@
     "outDir": "./build/",
     "sourceMap": true,
     "jsx": "react",
-    "lib": ["esnext", "dom"],
+    "lib": ["es6", "dom"],
     "module": "commonjs",
-    "target": "es5",
+    "target": "es6",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "resolveJsonModule": true,
-    "noImplicitAny": false,
     "downlevelIteration": true,
     "importHelpers": true,
     "skipLibCheck": true,
