--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/preset-typescript": "^7.15.0",
     "@stackr23/config-eslint": "^2.0.4",
     "@stackr23/webpack": "^2.1.1",
+    "@types/react": "^17.0.32",
     "eslint": "^7.27.0",
     "husky": "^7.0.2",
     "karma": "^6.3.4",
@@ -53,6 +54,8 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@material-ui/core": "^4.12.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "tslib": "^2.3.0"
