ci: change workflow to 'Lint, Test and Build'
remove build script from `npm test`
and add it to workflow and huskys pre-push hook

--- a/.github/workflows/github-action-test.yml
+++ b/.github/workflows/github-action-test.yml
@@ -1,4 +1,4 @@
-name: Test and Lint
+name: Lint, Test and Build
 on:
   push:
     branches:
@@ -27,3 +27,4 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm test
+      - run: npm run build
