config(ci): add `HUSKY=0` to env vars applied to `semantic_release` job

--- a/.github/workflows/github-action-release.yml
+++ b/.github/workflows/github-action-release.yml
@@ -27,3 +27,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          HUSKY: 0
